Cambios para el dia de la fecha

--- a/SegundoParcial.cbp
+++ b/SegundoParcial.cbp
@@ -32,30 +32,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="boolean.cpp" />
-		<Unit filename="boolean.h" />
-		<Unit filename="consulta.cpp" />
-		<Unit filename="consulta.h" />
-		<Unit filename="consultas.cpp" />
-		<Unit filename="consultas.h" />
-		<Unit filename="consultorio.h" />
-		<Unit filename="evaluacion.cpp" />
-		<Unit filename="evaluacion.h" />
-		<Unit filename="fecha.cpp" />
-		<Unit filename="fecha.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="manejo_archivos.h" />
-		<Unit filename="paciente.cpp" />
-		<Unit filename="paciente.h" />
-		<Unit filename="pacienteABB.cpp" />
-		<Unit filename="pacienteABB.h" />
-		<Unit filename="pacientes.h" />
-		<Unit filename="string.cpp" />
-		<Unit filename="string.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
 			<debugger />
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
